# WVM

./: .clang-format  ASSEMBLY_SYNTAX.md  CMakeLists.txt  README.md  main.c
.github/workflows/: wvm.yml
examples/: arithmetic.asm  benchmark.asm  fibbonachi.asm  hello.asm  loop.asm
src/: wvm.h
src/asm/: assembler.c  assembler.h
src/bytecode/: opcode.h
src/cpu/: cpu.c  cpu.h
src/memory/: memory.h
src/memory/ram/: ram.c  ram.h
src/memory/register/: register.h
